--- a/ffs/templates/base.html
+++ b/ffs/templates/base.html
@@ -18,6 +18,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('data.index') }}">Home</a></li>
                     <li><a href="{{ url_for('data.history') }}">History</a></li>
+                    <li><a href="{{ url_for('data.all_time') }}">All Time</a></li>
                 </ul>
             </div>
         </div>
