--- a/ffs/templates/alltime.html
+++ b/ffs/templates/alltime.html
@@ -8,13 +8,13 @@
     <h2>All Time History</h2>
     <table class="table">
         <tr>
-            <th>Team</th>
-            <th>Wins</th>
-            <th>Losses</th>
-            <th>Points Scored</th>
-            <th>Points Against</th>
-            <th>Points Scored / Game</th>
-            <th>Points Against / Game</th>
+            <th scope="col">Team</th>
+            <th scope="col">Wins</th>
+            <th scope="col">Losses</th>
+            <th scope="col">Points Scored</th>
+            <th scope="col">Points Against</th>
+            <th scope="col">Points Scored / Game</th>
+            <th scope="col">Points Against / Game</th>
         </tr>
         {% for d in data %}
             <tr>
