--- a/ffs/templates/base.html
+++ b/ffs/templates/base.html
@@ -17,6 +17,8 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('data.index') }}">Home</a></li>
+                    <li><a href="{{ url_for('data.history') }}">History</a></li>
+                    <li><a href="{{ url_for('data.all_time') }}">All Time</a></li>
                 </ul>
             </div>
         </div>
