--- a/ffs/templates/drafts.html
+++ b/ffs/templates/drafts.html
@@ -6,6 +6,6 @@
 
 {% block app_content %}
     {% for year in years %}
-        <h2>Year: {{ year }}</h2>
+        <div>Year: <a href="{{ url_for('data.draft', year=year) }}">{{ year }}</a></div>
     {% endfor %}
 {% endblock %}
